--- a/css/styles.css
+++ b/css/styles.css
@@ -41,17 +41,16 @@ h2{ font-size: 0.9rem;}
 p,h3{font-size: 0.8rem;}
 
 .home__{
-    height: 100%;    
+    height: 100%;
+    padding: 0;
 }
 /* ----- home about me ---------- */
 .home__about_me{
    height: 100vh;
     background-color: var(--main-c-white);
     box-shadow: 5px 0px 5px rgba(0, 0, 0, .5);
-    /* height: initial; */
     background-color: var(--main-c-black);
-    /* position: fixed; */
-    /* left: 50%; */
+    
 }
 
 .home__about_me_name{
@@ -182,3 +181,32 @@ ul.timeline > li:before {
     text-align: center;
     margin: 10px 0;
 }
+
+
+
+/* // Small devices (landscape phones, 576px and up) */
+@media (max-width: 576px) {
+    .home__about_me{
+        position:relative;
+    }
+    .home__skill_n{
+        width: 75px;
+        height: 75px;
+    }
+ }
+
+/* // Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+    .home__about_me{
+        position:sticky;
+    top: 0;
+    z-index:1020
+    }
+   
+}
+
+/* // Large devices (desktops, 992px and up) */
+@media (min-width: 992px) { }
+
+/* // Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) { }
